# BEACON-semantics

BEACON/: .gitignore  LICENSE  README.md  pyproject.toml
BEACON/beacon/: __init__.py  benchmark.py  main.py  main_beacon.py  main_bug1.py  main_bug2.py  requirements.txt
BEACON/beacon/core/: .gitignore  METHODS.md  __init__.py  baselines.py  bug2_algorithm.py  bug_algorithm.py  cibp.py  constants.py  debug_bug.py  dstar_lite_algorithm.py  models.py  planner.py  rrt_greedy.py  run_demo.sh  scene_configs.py  scene_setup.py  visualization.py
BEACON/beacon/core/ml/: decision_log.pkl  evaluate_ml.py  push_policy.py  push_policy_model.pkl  train_push_policy.py
BEACON/beacon/core/outputs/: compare_algorithms.py
BEACON/beacon/environment/: draw_basic.py  draw_scene.py  draw_scene_poly.py  export_regular_demo_scenes.py  generate_beacon_formula_scenes.py  generate_circle_scenes.py  generate_polygonal_scenes.py  run.py  run_basic.py  run_circles.py  run_complex.py  run_family.py  run_poly.py  scene_basic.py  scene_complex.py  scene_generator_pybullet.py  scene_generator_v2.py  test_scene.py  visualize_scenes.py  visualize_v2.py
BEACON/beacon/experiments/: run_one_scene.py  run_trials.py  visualize.py
BEACON/beacon/planning/: baselines.py  beacon_planner.py  cost_map.py  semantic_cost.py  vlm_updater.py
BEACON/beacon/utils/: algorithm_illustration.py  analysis.py  compare_scene_complex_metrics.py  evaluation.py  generate_paper_figures.py  geometry.py  metrics.py  plots.py  run_scene_complex_metrics.py  summarize_scene_complex_metrics.py
Baselines/: baseline.py
(+1804 files in other folders)
