[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "beacon"
version = "0.1.0"
description = "Online motion planning for disk robots in partially known environments with semantic obstacle interaction"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "shapely>=2.0",
    "pybullet>=3.2",
]

[project.optional-dependencies]
vlm = ["openai>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["beacon*"]
